@@ -1,0 +1,11 @@
+language: python
+python:
+  - "2.6"
+  - "2.7"
+  - "3.3"
+install:
+  - pip install coveralls
+script:
+  coverage run --source=psdash setup.py test
+after_success:
+  coveralls
